# UE-AUDIO-MCP

./: .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  README.md  REFERENCE.md  ROADMAP.md  TEMPLATES.md  TODO.md  TOOLS_AND_COMMANDS.md  memories.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
docs/: metasound_pin_fixes_2026-02-12.md
exports/: all_metasound_nodes.json  blueprint_functions_audio.json  lyra_audio_analysis.md  stackobot_audio_analysis.md  stackobot_bp_audio.json  stackobot_bp_audio_scan.json  stackobot_metasounds_full.json
research/: lyra_audio_patterns.md  research_ambient_procedural_sound_design.md  research_audio_driven_gameplay.md  research_audiolink_wwise_ue5.md  research_blueprint_audio_patterns.md  research_blueprint_node_database.md  research_metasound_builder_implementations.md  research_metasound_custom_nodes_cpp.md  research_metasound_node_display_style.md  research_metasound_save_and_editor.md  research_metasounds_game_audio.md  research_node_registry_enumeration.md  research_quartz_music_system.md  research_ue57_arfilter_asset_query.md  research_ue57_metasounds_builder_api.md  research_ue5_blueprint_libraries.md  research_ue5_blueprint_nodes.md  research_unreal_mcp_landscape.md  research_waapi_mcp_server.md  research_wwise_ue5_blueprint_nodes.md
scripts/: bp_all_paths.json  bp_categories.backup.json  bp_categories.json  bp_leaf_nodes.backup.json  bp_leaf_nodes.json  bp_node_specs.backup.json  build_plugin.sh  convert_export_to_template.py  cross_reference.py  dump_blueprints_ue5.py  export_catalogues.py  extract_uasset_audio.py  ms_node_specs.json  ms_raw_page.html  node_specs_sample.json  parse_metasound_export.py  (+15 more)
(+202 files in other folders)
